# ai-engineering-buildcamp

./: .gitignore  main.py  pyproject.toml
01-foundations/: 01-notes.md  gemini-setup.ipynb  rag.ipynb  streaming.ipynb  structured-output.ipynb
02-rag-usecases/: rag-class.ipynb  rag.py
03-agentic-rag/: 03-notes.md  agent-class.ipynb  agentic-rag.ipynb  agentic-search.ipynb  pydantic-ai.ipynb  search_tools.py  tool-call-loop.ipynb  toyaikit.ipynb
docs/: learning-in-public.md  project-ideas.md
docs/office-hours/: 260413_kick-off.md  260420_office-hour.md
mini-projects/01-book-rag/: book-rag.ipynb  convert_books_to_markdown.py  download_books.py
mini-projects/01-book-rag/books_text/: Think_Python_2e.md
mini-projects/03-wikipedia-search-agent/: wikipedia-search-agent.ipynb
mini-projects/04-documentation-agent/: .gitignore  Makefile  app.py  doc_agent.py  main.py  models.py  pyproject.toml  tools.py
mini-projects/04-documentation-agent/tests/: conftest.py  cost_tracker.py  judge.py  test_agent.py  test_judge.py  utils.py
