[project]
name = "ai-engineering-buildcamp"
version = "0.1.0"
description = "AI Engineering Buidcamp: From RAG to Agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitsource>=0.0.4",
    "jupyter>=1.1.1",
    "minsearch>=0.0.10",
    "openai>=2.32.0",
    "python-frontmatter>=1.1.0",
    "requests>=2.33.1",
]
